--- a/assets/styles/components/footer.scss
+++ b/assets/styles/components/footer.scss
@@ -21,7 +21,7 @@
 
 .footer-list {
   display: inline-block;
-  > * { padding-left: .6rem; }
+  > * { padding-right: .6rem; }
 }
 
 .footer-link {
